detail view for all alcohol products work

--- a/LHL Midterm/LHL Midterm/Base.lproj/Main.storyboard
+++ b/LHL Midterm/LHL Midterm/Base.lproj/Main.storyboard
@@ -10,6 +10,81 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Search Bar View Controller-->
+        <scene sceneID="PY0-JG-4CU">
+            <objects>
+                <viewController id="bpO-JB-b2Z" customClass="SearchBarViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="t77-xl-Mli"/>
+                        <viewControllerLayoutGuide type="bottom" id="MlK-5G-k9H"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Xsr-wb-TKx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3KJ-l8-boD">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="L8L-fZ-f1k">
+                                    <size key="itemSize" width="178" height="141"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SearchIdentifier" id="TV0-uD-ZQW" customClass="SearchViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="141"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="178" height="141"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w5O-3f-MaH">
+                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uSJ-Zd-BlJ">
+                                                    <rect key="frame" x="0.0" y="20" width="178" height="121"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <connections>
+                                            <outlet property="imageView" destination="uSJ-Zd-BlJ" id="PyZ-zG-5lW"/>
+                                            <outlet property="nameLabel" destination="w5O-3f-MaH" id="EHL-l6-z4r"/>
+                                            <segue destination="air-Vx-vgB" kind="show" identifier="DetailedView" id="guu-7c-dgq"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="bpO-JB-b2Z" id="AmP-W0-hXJ"/>
+                                    <outlet property="delegate" destination="bpO-JB-b2Z" id="C6p-Mp-v5a"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="3KJ-l8-boD" id="afx-zj-ZDt"/>
+                        <outlet property="searchDisplayController" destination="nHe-2l-5Q6" id="N88-hE-9Iu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sz6-yN-hIy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController searchResultsTitle="Search Products" id="nHe-2l-5Q6">
+                    <connections>
+                        <outlet property="delegate" destination="bpO-JB-b2Z" id="lax-Vn-fGN"/>
+                        <outlet property="searchContentsController" destination="bpO-JB-b2Z" id="Rb9-hm-nhu"/>
+                        <outlet property="searchResultsDataSource" destination="bpO-JB-b2Z" id="Bmg-Tj-RXb"/>
+                        <outlet property="searchResultsDelegate" destination="bpO-JB-b2Z" id="SoO-5n-hTx"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1009" y="-706"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -23,7 +98,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7eg-zM-Bkn">
-                                <rect key="frame" x="0.0" y="202" width="375" height="465"/>
+                                <rect key="frame" x="0.0" y="134" width="375" height="533"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="i7e-cS-8eZ">
                                     <size key="itemSize" width="167" height="112"/>
@@ -39,7 +114,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="167" height="112"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5nQ-Ba-aMD">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5nQ-Ba-aMD">
                                                     <rect key="frame" x="0.0" y="20" width="167" height="92"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
@@ -66,58 +141,35 @@
                                 </connections>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Promotions!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ftf-0J-eM6">
-                                <rect key="frame" x="35" y="140" width="306" height="46"/>
+                                <rect key="frame" x="35" y="72" width="306" height="46"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="38"/>
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="rkZ-cA-YSI">
-                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="o8q-qE-fAT"/>
-                                </connections>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="rkZ-cA-YSI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7Vm-Tf-pKW"/>
                             <constraint firstItem="7eg-zM-Bkn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="LhH-fd-78b"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7eg-zM-Bkn" secondAttribute="bottom" id="MQn-Od-0Lh"/>
-                            <constraint firstAttribute="trailing" secondItem="rkZ-cA-YSI" secondAttribute="trailing" id="SBk-6n-lcH"/>
-                            <constraint firstItem="Ftf-0J-eM6" firstAttribute="top" secondItem="rkZ-cA-YSI" secondAttribute="bottom" constant="32" id="ezY-sg-dnq"/>
+                            <constraint firstItem="Ftf-0J-eM6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="iDg-5j-P0v"/>
                             <constraint firstItem="7eg-zM-Bkn" firstAttribute="top" secondItem="Ftf-0J-eM6" secondAttribute="bottom" constant="16" id="tMz-st-QC3"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ftf-0J-eM6" secondAttribute="trailing" constant="18" id="uMS-CH-dj7"/>
                             <constraint firstAttribute="trailing" secondItem="7eg-zM-Bkn" secondAttribute="trailing" id="wlY-Nr-700"/>
-                            <constraint firstItem="rkZ-cA-YSI" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="xrk-8p-8mz"/>
                             <constraint firstItem="Ftf-0J-eM6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="19" id="yam-Ca-e43"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="86q-sJ-Tza"/>
+                    <navigationItem key="navigationItem" id="86q-sJ-Tza">
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="OrC-RU-Xtf">
+                            <connections>
+                                <segue destination="bpO-JB-b2Z" kind="show" identifier="searchSegue" id="iDC-Lh-dE9"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="7eg-zM-Bkn" id="lNO-Bw-QNK"/>
-                        <outlet property="searchBar" destination="rkZ-cA-YSI" id="KpR-D4-0Cg"/>
-                        <outlet property="searchDisplayController" destination="GR1-rm-G6Y" id="aXv-b2-zev"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="o5V-Ae-ulK">
-                    <connections>
-                        <outlet property="delegate" destination="BYZ-38-t0r" id="Ob4-RD-rus"/>
-                        <outlet property="searchContentsController" destination="BYZ-38-t0r" id="klr-6z-IlN"/>
-                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="f4W-bY-rh0"/>
-                        <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="xa9-Xw-sBl"/>
-                    </connections>
-                </searchDisplayController>
-                <searchDisplayController id="GR1-rm-G6Y">
-                    <connections>
-                        <outlet property="delegate" destination="BYZ-38-t0r" id="Id4-pS-G3S"/>
-                        <outlet property="searchBar" destination="rkZ-cA-YSI" id="uFA-Lw-jxA"/>
-                        <outlet property="searchContentsController" destination="BYZ-38-t0r" id="uoc-yD-1tA"/>
-                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="zWO-lF-3Eq"/>
-                        <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="an2-RO-8Ms"/>
-                    </connections>
-                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="1056.8" y="123.68815592203899"/>
         </scene>
@@ -137,7 +189,7 @@
                                 <rect key="frame" x="0.0" y="368" width="375" height="299"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3aA-NB-XkI">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3aA-NB-XkI">
                                 <rect key="frame" x="16" y="72" width="150" height="269"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -205,4 +257,7 @@
             <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="guu-7c-dgq"/>
+    </inferredMetricsTieBreakers>
 </document>
