--- a/LHL Midterm/LHL Midterm/Base.lproj/Main.storyboard
+++ b/LHL Midterm/LHL Midterm/Base.lproj/Main.storyboard
@@ -11,79 +11,69 @@
     </dependencies>
     <scenes>
         <!--Search Bar View Controller-->
-        <scene sceneID="PY0-JG-4CU">
+        <scene sceneID="tyG-K5-RCQ">
             <objects>
-                <viewController id="bpO-JB-b2Z" customClass="SearchBarViewController" sceneMemberID="viewController">
+                <viewController id="itJ-JJ-acH" customClass="SearchBarViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="t77-xl-Mli"/>
-                        <viewControllerLayoutGuide type="bottom" id="MlK-5G-k9H"/>
+                        <viewControllerLayoutGuide type="top" id="Yk3-0v-Pjd"/>
+                        <viewControllerLayoutGuide type="bottom" id="Z0d-rw-ulB"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Xsr-wb-TKx">
+                    <view key="view" contentMode="scaleToFill" id="toe-Ph-rHP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3KJ-l8-boD">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="197" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="T8t-6r-cNd">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="L8L-fZ-f1k">
-                                    <size key="itemSize" width="178" height="141"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SearchIdentifier" id="TV0-uD-ZQW" customClass="SearchViewCell">
-                                        <rect key="frame" x="0.0" y="0.0" width="178" height="141"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="178" height="141"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CellIdentifier" rowHeight="197" id="J0Y-A0-7s0" customClass="SearchViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="197"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J0Y-A0-7s0" id="heI-3B-rWc">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="196.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w5O-3f-MaH">
-                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="21"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="svl-xb-tlG">
+                                                    <rect key="frame" x="67" y="61" width="240" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6Y-17-ovd">
+                                                    <rect key="frame" x="67" y="31" width="240" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uSJ-Zd-BlJ">
-                                                    <rect key="frame" x="0.0" y="20" width="178" height="121"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
                                             </subviews>
-                                        </view>
+                                        </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="imageView" destination="uSJ-Zd-BlJ" id="PyZ-zG-5lW"/>
-                                            <outlet property="nameLabel" destination="w5O-3f-MaH" id="EHL-l6-z4r"/>
-                                            <segue destination="air-Vx-vgB" kind="show" identifier="DetailedView" id="guu-7c-dgq"/>
+                                            <outlet property="imageDisplay" destination="svl-xb-tlG" id="jzW-Uo-bYe"/>
+                                            <outlet property="nameLabel" destination="Y6Y-17-ovd" id="Rg0-ar-ex8"/>
+                                            <segue destination="air-Vx-vgB" kind="show" identifier="DetailedView" id="Vit-DJ-mTs"/>
                                         </connections>
-                                    </collectionViewCell>
-                                </cells>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="bpO-JB-b2Z" id="AmP-W0-hXJ"/>
-                                    <outlet property="delegate" destination="bpO-JB-b2Z" id="C6p-Mp-v5a"/>
+                                    <outlet property="dataSource" destination="itJ-JJ-acH" id="b5b-3s-Sj2"/>
+                                    <outlet property="delegate" destination="itJ-JJ-acH" id="NxY-mS-L4A"/>
                                 </connections>
-                            </collectionView>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="T8t-6r-cNd" firstAttribute="top" secondItem="toe-Ph-rHP" secondAttribute="top" id="3u2-Yo-SIe"/>
+                            <constraint firstItem="T8t-6r-cNd" firstAttribute="leading" secondItem="toe-Ph-rHP" secondAttribute="leading" id="8lw-Ik-08S"/>
+                            <constraint firstAttribute="trailing" secondItem="T8t-6r-cNd" secondAttribute="trailing" id="bVD-mx-pZG"/>
+                            <constraint firstItem="Z0d-rw-ulB" firstAttribute="top" secondItem="T8t-6r-cNd" secondAttribute="bottom" id="bZY-3p-KSL"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="3KJ-l8-boD" id="afx-zj-ZDt"/>
-                        <outlet property="searchDisplayController" destination="nHe-2l-5Q6" id="N88-hE-9Iu"/>
+                        <outlet property="tableView" destination="T8t-6r-cNd" id="odC-ha-QYK"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sz6-yN-hIy" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController searchResultsTitle="Search Products" id="nHe-2l-5Q6">
-                    <connections>
-                        <outlet property="delegate" destination="bpO-JB-b2Z" id="lax-Vn-fGN"/>
-                        <outlet property="searchContentsController" destination="bpO-JB-b2Z" id="Rb9-hm-nhu"/>
-                        <outlet property="searchResultsDataSource" destination="bpO-JB-b2Z" id="Bmg-Tj-RXb"/>
-                        <outlet property="searchResultsDelegate" destination="bpO-JB-b2Z" id="SoO-5n-hTx"/>
-                    </connections>
-                </searchDisplayController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2UP-tl-94b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1009" y="-706"/>
+            <point key="canvasLocation" x="2354" y="-821"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -161,7 +151,7 @@
                     <navigationItem key="navigationItem" id="86q-sJ-Tza">
                         <barButtonItem key="rightBarButtonItem" systemItem="search" id="OrC-RU-Xtf">
                             <connections>
-                                <segue destination="bpO-JB-b2Z" kind="show" identifier="searchSegue" id="iDC-Lh-dE9"/>
+                                <segue destination="itJ-JJ-acH" kind="show" identifier="searchView" id="aLm-WS-2sM"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -171,7 +161,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1056.8" y="123.68815592203899"/>
+            <point key="canvasLocation" x="1198" y="-13"/>
         </scene>
         <!--Detailed View Controller-->
         <scene sceneID="3qE-C4-Z21">
@@ -236,7 +226,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1994.4000000000001" y="123.68815592203899"/>
+            <point key="canvasLocation" x="2465" y="-45"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Syd-G4-SDe">
@@ -258,6 +248,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="guu-7c-dgq"/>
+        <segue reference="Vit-DJ-mTs"/>
     </inferredMetricsTieBreakers>
 </document>
